Switch button to activate extension

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shorts Extension</title>
-    <script src="scripts/background.js"></script>
-    <script src="scripts/foreground.js"></script>
+    <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
-    <button id="click-Me">Click Me!</button>
+    <main>
+        <h1 id ="title">Status:</h1>
+        <input type="checkbox" id="switch"/><label for="switch">Switch</label>
+    </main>
+    <script src="scripts/popup.js"></script>
 </body>
 </html>
 
