--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <main>
-        <h1 id ="title">Status:</h1>
-        <input type="checkbox" id="switch"/><label for="switch">Switch</label>
+        <h1 id ="title">Shorts Config</h1>
+        <div id="global-status">
+            <h3>Active:</h3>
+            <div class="checkbox">
+                <input type="checkbox" id="switch"/><label for="switch">Switch</label>                                
+            </div>
+        </div>
     </main>
     <script src="scripts/popup.js"></script>
 </body>
