--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1 id ="title">Shorts Config</h1>
+        <h1 id ="title">Shorts Block</h1>
         <div id="global-status">
             <h3>Active:</h3>
             <div class="checkbox">
