--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <main>
-        <h1 id ="title">Shorts Block</h1>
+        <div id = "title-section">
+            <img src="icons/icon48.png" alt="icon-img">
+            <div id="desc-section">
+                <h1 id ="title">Shorts Block</h1>
+                <p>No more annoying shorts,<br>in your YT experience.</p>
+            </div>
+        </div>
         <div id="global-status">
-            <h3>Active:</h3>
+            <h2>Active:</h3>
             <div class="checkbox">
                 <input type="checkbox" id="switch"/><label for="switch">Switch</label>                                
             </div>
