--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="icons/icon48.png" alt="icon-img">
             <div id="desc-section">
                 <h1 id ="title">Shorts Block</h1>
-                <p>No more annoying shorts,<br>in your YT experience.</p>
+                <p>No more annoying shorts.</p>
             </div>
         </div>
         <div id="global-status">
