--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shorts Extension</title>
     <link href="style/style.css" rel="stylesheet">
 </head>
@@ -15,13 +16,39 @@
                 <p>No more annoying shorts.</p>
             </div>
         </div>
-        <div id="global-status">
+        <div id="global-status" class="status">
             <h2>Active:</h2>
             <div class="checkbox">
-                <input type="checkbox" id="switch"/><label for="switch">Switch</label>                                
+                <input type="checkbox" id="switch" class="switch"/><label for="switch" id="main-switch">Switch</label>                                
             </div>
         </div>
     </main>
+
+    <section id="info-section">
+        <div id="full-block-status" class="status">
+            <h3>Full Block:</h3>
+            <div class="checkbox">
+                <input type="checkbox" id="switch-fb" class="switch"/><label for="switch-fb" class="toggle-switch">Switch</label>                                
+            </div>
+        </div>
+        <div id="soft-block-status" class="status">
+            <h3>Soft Block:</h3>
+            <div class="checkbox">
+                <input type="checkbox" id="switch-sb" class="switch"/><label for="switch-sb" class="toggle-switch">Switch</label>                                
+            </div>
+        </div>
+        <div id="view-status" class="status">
+            <h3>View as Video:</h3>
+            <div class="checkbox">
+                <input type="checkbox" id="switch-vv" class="switch"/><label for="switch-vv" class="toggle-switch">Switch</label>                                
+            </div>
+        </div>
+    </section>
+
+    <div id="show-more">
+        <input type="checkbox" id="show-more-input"/>
+        <label for="show-more-input" class="arrow-label"><i class="fa-solid fa-angle-down"></i> <span id="more-less"><h3>More</h3></span></label>
+    </div>
     <script src="scripts/popup.js"></script>
 </body>
 </html>
