Fixed errors in v_1.0.5

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
                         <input type="checkbox" id="switch-vv" class="switch"/><label for="switch-vv" class="toggle-switch">Switch</label>                                
                     </div>
                 </div>
+                <div id="version-section" class ="status">
+                    <h3>Version:</h3>
+                    <h4 id="version"></h4>
+                </div>
             </section>
-        
             <footer id="show-more">
                 <input type="checkbox" id="show-more-input"/>
                 <label for="show-more-input" class="arrow-label"><i class="fa-solid fa-angle-down"></i> <span id="more-less"><h3>More</h3></span></label>
