Fixed errors in v1.0.9

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                         <input type="checkbox" id="switch-vv" class="switch"/><label for="switch-vv" class="toggle-switch">Switch</label>                                
                     </div>
                 </div>
+                <div id="version-section" class ="status">
+                    <h3>Version:</h3>
+                    <h4 id="version"></h4>
+                </div>
             </section>
         
             <footer id="show-more">
